[package]
name = "crazy_porn_blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16.0"
confy = "0.4.0"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
dialoguer = "0.9.0"
